Bug 369386 - [Wayland] Panel "Auto-hide" option does not work.
Summary: [Wayland] Panel "Auto-hide" option does not work.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-wayland (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 370277 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-09-26 18:14 UTC by Tony
Modified: 2016-10-18 06:55 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
behavior (238.89 KB, video/x-matroska)
2016-10-08 00:25 UTC, Aleix Pol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2016-09-26 18:14:59 UTC
As the title says. I've tried adding a empty panel set the it to auto-hide, logout and in, rebooted, not working.

It works OK on X.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2016-09-27 11:51:32 UTC
Auto-hiding works by setting an X property on the window which KWin reads to hide it. Obviously that doesn't work on Wayland. Needs extending the plasmashell wayland protocol or something like that.
Comment 2 Martin Flöser 2016-10-05 07:31:57 UTC
As mentioned in comment #1 it needs an extension to the Wayland protocol and implementation in KWin. As a matter of fact the basic work for that landed in KWin master today: https://quickgit.kde.org/?p=kwin.git&a=commit&h=dd3c6d6cc24cb215b91b52d9ac0be023a8f48633

So all that's needed is the protocol extension, but means it can only be done for Plasma 5.9
Comment 3 Aleix Pol 2016-10-08 00:12:50 UTC
*** Bug 370277 has been marked as a duplicate of this bug. ***
Comment 4 Aleix Pol 2016-10-08 00:25:51 UTC
Created attachment 101483 [details]
behavior
Comment 5 Martin Flöser 2016-10-10 14:50:07 UTC
Step 1 of 3: extending the protocol: https://phabricator.kde.org/D3007
Comment 6 Martin Flöser 2016-10-18 06:22:16 UTC
Step 2: https://phabricator.kde.org/D3080
Step 3: https://phabricator.kde.org/D3084
Comment 7 Bhushan Shah 2016-10-18 06:55:14 UTC
Git commit d0df5725d9ca9e1a8067ef000b2d750e809ff249 by Bhushan Shah.
Committed on 18/10/2016 at 06:53.
Pushed by bshah into branch 'master'.

[shell] Support autohide panel on wayland

Summary:
This makes use of requests to hide and show autohide panels from
kwayland
Depends on D3007

Test Plan:
autohide panel now works, with D3080 in kwin, but windows can
cover panel still needs work

Reviewers: graesslin, #plasma

Reviewed By: graesslin, #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3084

M  +7    -0    shell/panelview.cpp

http://commits.kde.org/plasma-workspace/d0df5725d9ca9e1a8067ef000b2d750e809ff249