[shell] Support autohide panel on wayland

Summary:
This makes use of requests to hide and show autohide panels from
kwayland

BUG: 369386
Depends on D3007

Test Plan:
autohide panel now works, with D3080 in kwin, but windows can
cover panel still needs work

Reviewers: graesslin, #plasma

Reviewed By: graesslin, #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3084