shell/panelview.cpp
@@ -651,6 +651,13 @@ void PanelView::setAutoHideEnabled(bool enabled)
         KWindowEffects::slideWindow(winId(), slideLocation, -1);
     }
 #endif
+    if (m_shellSurface && m_visibilityMode == PanelView::AutoHide) {
+        if (enabled) {
+            m_shellSurface->requestHideAutoHidingPanel();
+        } else {
+            m_shellSurface->requestShowAutoHidingPanel();
+        }
+    }
 }
 
 void PanelView::resizeEvent(QResizeEvent *ev)
